--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ permalink:        pretty
 
 # Setup
 title:            DarkScope
-tagline:          '信，省，行'
-description:      '新窝，少写干活~~~'
+tagline:          '信 省 行'
+description:      '新窝，少写干货~~~'
 
 author:
   name:           'DarkScope'
